--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-expo-app",
+  "name": "rinzen",
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
@@ -40,6 +40,7 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-config-universe": "^12.0.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "metro": "^0.81.1",
     "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.0",
